--- a/ETL_Mini_Project_Starter_Code_PChhetri.ipynb
+++ b/ETL_Mini_Project_Starter_Code_PChhetri.ipynb
@@ -2336,7 +2336,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>This list of contacts was updated on 11/10/2020.</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Note: The contact information needs to be separated into the following columns: contact_id,  first name, last name,  and email.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>contact_info</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                  This list of contacts was updated on 11/10/2020.\n",
+       "0  Note: The contact information needs to be separated into the following columns: contact_id,  first name, last name,  and email.\n",
+       "1                                                                                                                                 \n",
+       "2                                                                                                                     contact_info\n",
+       "3                                         {\"contact_id\": 4661, \"name\": \"Cecilia Velasco\", \"email\": \"cecilia.velasco@rodrigues.fr\"}\n",
+       "4                                                {\"contact_id\": 3765, \"name\": \"Mariana Ellis\", \"email\": \"mariana.ellis@rossi.org\"}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the data into a Pandas DataFrame\n",
+    "contact_info_df = pd.read_excel('Resources/contacts.xlsx')\n",
+    "contact_info_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2352,14 +2426,23 @@
     "import json\n",
     "dict_values = []\n",
     "\n",
+    "# Get each row into a list.\n",
+    "for column, value in contact_info_df.items():\n",
+    "    value = value.tolist()\n",
     "\n",
-    "# Print out the list of values for each row.\n",
+    "# Convert each row into dict   \n",
+    "for i in value[3:]:\n",
+    "    v = json.loads(i)\n",
+    "    l = list(v.values())\n",
+    "    dict_values.append(l)\n",
+    " \n",
+    "# Print out the list of values for each row.   \n",
     "print(dict_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2432,19 +2515,21 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "contact_info = pd.DataFrame(dict_values, columns= ['contact_id', 'name', 'email'])\n",
+    "contact_info.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2465,12 +2550,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_info.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2589,22 +2675,25 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
+    "name_df = contact_info['name']\n",
+    "contact_info[['first_name','last_name']]= name_df.str.split(' ', n=1, expand = True)\n",
+    "contact_info.head()\n",
     "\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "contact_info_clean = contact_info.drop(columns=[\"name\"])\n",
+    "contact_info_clean.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2723,18 +2812,20 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contact_info_clean = contact_info_clean[['contact_id','first_name', 'last_name', 'email']]\n",
+    "contact_info_clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2847,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contact_info_clean.info()"
    ]
   },
   {
@@ -2766,7 +2858,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contact_info_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   },
   {
@@ -3686,7 +3778,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dev_2",
    "language": "python",
    "name": "python3"
   },
@@ -3700,7 +3792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
